[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://components/drone_info_view.gd" type="Script" id=2]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/industrial_9_square.png-196870362c9792539ff214f864a5a97f.stex"

[node name="DroneInfoView" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 1 )
region_rect = Rect2( 0, 0, 32, 32 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
__meta__ = {
"_editor_description_": ""
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
theme = ExtResource( 1 )
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_editor_description_": "Displays specific stats of a given drone, usually the first one in the launch queue"
}

[node name="LabelContainer" type="GridContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1908.0
margin_bottom = 1068.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="NameLabel" type="Label" parent="MarginContainer/LabelContainer"]
margin_right = 149.0
margin_bottom = 24.0
text = "Name: "

[node name="NameValue" type="Label" parent="MarginContainer/LabelContainer"]
unique_name_in_owner = true
margin_left = 153.0
margin_right = 1896.0
margin_bottom = 24.0
size_flags_horizontal = 3
align = 2
valign = 1

[node name="BatteryLabel" type="Label" parent="MarginContainer/LabelContainer"]
margin_top = 28.0
margin_right = 149.0
margin_bottom = 52.0
text = "Battery: "

[node name="BatteryValue" type="Label" parent="MarginContainer/LabelContainer"]
unique_name_in_owner = true
margin_left = 153.0
margin_top = 28.0
margin_right = 1896.0
margin_bottom = 52.0
size_flags_horizontal = 3
align = 2
valign = 1

[node name="BatteryDrainLabel" type="Label" parent="MarginContainer/LabelContainer"]
margin_top = 56.0
margin_right = 149.0
margin_bottom = 80.0
text = "Battery Drain: "

[node name="BatteryDrainValue" type="Label" parent="MarginContainer/LabelContainer"]
unique_name_in_owner = true
margin_left = 153.0
margin_top = 56.0
margin_right = 1896.0
margin_bottom = 80.0
size_flags_horizontal = 3
align = 2
valign = 1

[node name="SpeedLabel" type="Label" parent="MarginContainer/LabelContainer"]
margin_top = 84.0
margin_right = 149.0
margin_bottom = 108.0
text = "Speed: "

[node name="SpeedValue" type="Label" parent="MarginContainer/LabelContainer"]
unique_name_in_owner = true
margin_left = 153.0
margin_top = 84.0
margin_right = 1896.0
margin_bottom = 108.0
size_flags_horizontal = 3
align = 2
valign = 1

[node name="DamageLabel" type="Label" parent="MarginContainer/LabelContainer"]
margin_top = 112.0
margin_right = 149.0
margin_bottom = 136.0
text = "Damage: "

[node name="DamageValue" type="Label" parent="MarginContainer/LabelContainer"]
unique_name_in_owner = true
margin_left = 153.0
margin_top = 112.0
margin_right = 1896.0
margin_bottom = 136.0
size_flags_horizontal = 3
align = 2
valign = 1

[node name="CritChanceLabel" type="Label" parent="MarginContainer/LabelContainer"]
margin_top = 140.0
margin_right = 149.0
margin_bottom = 164.0
text = "Crit Chance: "

[node name="CritChanceValue" type="Label" parent="MarginContainer/LabelContainer"]
unique_name_in_owner = true
margin_left = 153.0
margin_top = 140.0
margin_right = 1896.0
margin_bottom = 164.0
size_flags_horizontal = 3
align = 2
valign = 1

[node name="CritDamageLabel" type="Label" parent="MarginContainer/LabelContainer"]
margin_top = 168.0
margin_right = 149.0
margin_bottom = 192.0
text = "Crit Damage: "

[node name="CritDamageValue" type="Label" parent="MarginContainer/LabelContainer"]
unique_name_in_owner = true
margin_left = 153.0
margin_top = 168.0
margin_right = 1896.0
margin_bottom = 192.0
size_flags_horizontal = 3
align = 2
valign = 1

[node name="MaxBounceLabel" type="Label" parent="MarginContainer/LabelContainer"]
margin_top = 196.0
margin_right = 149.0
margin_bottom = 220.0
text = "Max Bounces: "

[node name="MaxBounceValue" type="Label" parent="MarginContainer/LabelContainer"]
unique_name_in_owner = true
margin_left = 153.0
margin_top = 196.0
margin_right = 1896.0
margin_bottom = 220.0
size_flags_horizontal = 3
align = 2
valign = 1
